workshop03/bggappv1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1-deploy
  labels:
    name: bggappv1-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      name: bggappv1-pod
      version: v1
  template:
    metadata:
      name: bggappv1-pod
      labels:
        name: bggappv1-pod
        version: v1
    spec:
      containers:
      - name: bggappv1-container
        image: stackupiss/bgg-backend:v1
        args: ["--prefix","/v1"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128M
---
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  labels:
    name: bggappv1-svc
spec:
  type: ClusterIP
  selector:
    name: bggappv1-pod
    version: v1
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
